--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,12 @@
 .navbar navbar-expand-lg navbar-light bg-light {
   color:  6D6875;
   }
+.image a {
+  float: left;
+}
+.image b {
+  clear: both;
+}
+.image c {
+  float: right;
+}
