--- a/custom.css
+++ b/custom.css
@@ -29,7 +29,7 @@
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 25px;
-  color: #FFCDB2; /* pink */
+  color: #111; /* black? */
   display: block;
 }
 
