--- a/custom.css
+++ b/custom.css
@@ -18,7 +18,7 @@
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
-  right: 0;
+  left: 0;
   background-color: #B5838D; /* purple */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
