--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,7 @@
 .navbar navbar-expand-lg navbar-light bg-light {
   color:  6D6875;
   margin-left: 160px;
+  width: 80%;
   }
 .image a {
   float: left;
